# torchcondirf

./: .gitignore  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml
src/: __init__.py  base_crf_head.py  crf_head.py  util.py
tests/: CrfHeadTests.ipynb  conftest.py  helpers.py  test_crf_head.py
torchcondirf/: __init__.py  base_crf_head.py  crf_head.py  struct_crf_head.py  util.py
